--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
 									"type": "text",
 									"text": selectdate,
 									"weight": "bold",
-									"size": "xl"
+									"size": "xl",
+									"color": "#ffffff"
 								      },
 								      {
 									"type": "box",
@@ -135,7 +136,7 @@
 									      {
 										"type": "text",
 										"text": "堂次：",
-										"color": "#aaaaaa",
+										"color": "#ffffff",
 										"size": "lg",
 										"flex": 1
 									      },
@@ -143,7 +144,7 @@
 										"type": "text",
 										"text": selectclass,
 										"wrap": true,
-										"color": "#000000",
+										"color": "#ffffff",
 										"size": "lg",
 										"flex": 3
 									      }
@@ -157,7 +158,7 @@
 									      {
 										"type": "text",
 										"text": "姓名：",
-										"color": "#aaaaaa",
+										"color": "#ffffff",
 										"size": "lg",
 										"flex": 1
 									      },
@@ -165,7 +166,7 @@
 										"type": "text",
 										"text": signnamelist.toString(),
 										"wrap": true,
-										"color": "#000000",
+										"color": "#ffffff",
 										"size": "lg",
 										"flex": 3,
 										"contents": []
