--- a/index.html
+++ b/index.html
@@ -176,6 +176,11 @@
 									]
 								      }
 								    ]
+								  },
+								  "styles": {
+								    "body": {
+								      "backgroundColor": "#33c3f0"
+								    }
 								  }
 								}
 							    },
