--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			      <input class="u-full-width" type="text" name="signnames" required="required">
 			    </div>
 			    <div class="twelve columns">			  	
-			  	<input class="button-primary" type="submit" value="Submit">
+			  	<input class="button-primary" type="submit" value="送出">
 			  	<button type="button" style="float: right" onclick="addsignlist()">新增姓名欄位</button>
 			    </div>
 			  </div>
