--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			    </div>
 			  </div>
 
-			  <button type="submit" class="btn btn-primary">Submit</button>
+			  <button type="submit" class="btn btn-primary">送出</button>
 		  	  <button type="button" class="btn btn-outline-primary" style="float: right" onclick="addsignlist()">新增姓名欄位</button>
 			</form>
 		</div>
